src/Platform/Code/STE/MiddleWare/MiddleWare.h


MIDDLEWARE_API bool EFS_WriteFile(const TCHAR *sFileSrc, const TCHAR *sFileDst);

MIDDLEWARE_API bool EFS_Rename(const TCHAR *sOldName, const TCHAR* sNewName);

MIDDLEWARE_API bool EFS_NewFolder(const TCHAR *sFolder);

MIDDLEWARE_API bool EFS_DeleteFolder(const TCHAR *sFolder);

MIDDLEWARE_API bool EFS_CreateLink(const TCHAR *sFile, const TCHAR* sLinkFile);

MIDDLEWARE_API bool EFS_ReadLink(const TCHAR *sLinkFile, TCHAR* sFile);

MIDDLEWARE_API bool Audio_SetPath(const WORD iAudioDevice);

MIDDLEWARE_API bool Video_PowerOn(WORD& iCameraStatus);