src/Platform/Code/STE/ODMSkeleton/DllWrapper.vb


    Public Function ReadFile(ByVal sFileSrc As String, ByVal sFileDst As String) As String
        If (DllReadFile(sFileSrc, sFileDst)) Then
            Return "Success,Read File,"
        Else
            Return "Failure,Read File,"
        End If
    End Function

    Private Declare Function DllWriteFile Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "EFS_WriteFile" (ByVal sFileSrc As String, ByVal sFileDst As String) As Boolean

    Public Function WriteFile(ByVal sFileSrc As String, ByVal sFileDst As String) As String
        If (DllWriteFile(sFileSrc, sFileDst)) Then
            Return "Success,Write File,"
        Else
            Return "Failure,Write File,"
        End If
    End Function

    Private Declare Function DllRename Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "EFS_Rename" (ByVal sOldFile As String, ByVal sNewFile As String) As Boolean

    Public Function Rename(ByVal sOldFile As String, ByVal sNewFile As String) As String
        If (DllRename(sOldFile, sNewFile)) Then
            Return "Success,Rename,"
        Else
            Return "Failure,Rename,"
        End If
    End Function

    Private Declare Function DllDeleteFile Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "EFS_DeleteFolder" (ByVal sFile As String) As Boolean

    Public Function DeleteFile(ByVal sFile As String) As String
        If (DllDeleteFile(sFile)) Then
            Return "Success,Delete File,"
        Else
            Return "Failure,Delete File,"
        End If
    End Function


    Private Declare Function DllMakeFolder Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "EFS_NewFolder" (ByVal sFolder As String) As Boolean

    Public Function NewFolder(ByVal sFolder As String) As String
        If (DllMakeFolder(sFolder)) Then
            Return "Success,New Folder,"
        Else
            Return "Failure,New Folder,"
        End If
    End Function

    Private Declare Function DllRemoveFolder Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "EFS_RemoveFolder" (ByVal sFolder As String) As Boolean

    Public Function RemoveFolder(ByVal sFolder As String) As String
        If (DllRemoveFolder(sFolder)) Then
            Return "Success,Remove Folder,"
        Else
            Return "Failure,Remove Folder,"
        End If
    End Function

    Private Declare Function DllCreateLink Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "EFS_CreateLink" (ByVal sFile As String, ByVal sPointedFile As String) As Boolean

    Public Function CreateLink(ByVal sFile As String, ByVal sPointedFile As String) As String
        If (DllCreateLink(sFile, sPointedFile)) Then
            Return "Success,Create Link,"
        Else
            Return "Failure,Create Link,"
        End If
    End Function

    Private Declare Function DllReadLink Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "EFS_ReadLink" (ByVal sFile As String, ByVal sPointedFile As String) As Boolean

    Public Function ReadLink(ByVal sFile As String, ByVal sPointedFile As String) As String
        If (DllReadLink(sFile, sPointedFile)) Then
            Return "Success,Read Link,"
        Else
            Return "Failure,Read Link,"
        End If
    End Function

#End Region
#Region "Test Function for Audio"

    Private Declare Function DllSetAudioPath Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "Audio_SetPath" (ByVal iAudioDevice As Short) As Boolean

    Public Function AudioSetPath(ByVal iAudioDevice As Short) As String
        If (DllSetAudioPath(iAudioDevice)) Then
            Return "Success,Set Path,"
        Else
            Return "Failure,Set Path,"
        End If
    End Function

#End Region

#Region "Test Function for Video"

    Private Declare Function DllPowerOn Lib ".\Qisda\MiddleWare_StaticM.dll" Alias "Video_PowerOn" (ByVal iStatus As Short) As Boolean

    Public Function VideoPowerOn(ByVal iStatus As Short) As String
        If (DllPowerOn(iStatus)) Then
            Return "Success,Read Link,"
        Else
            Return "Failure,Read Link,"
        End If
    End Function

#End Region
#End If
End Class

